# One_Legged_Robot

./: .gitignore  README.md
data/カーペット種形成モデル/: EvaluateResult.csv  Parameter.csv  Result.csv
data/単純なＧＡカーペット/: EvaluateValue2.csv  Parameter.csv
data/単純なＧＡ床/: EvaluateValue1.csv  Parameter.csv
data/床種形成モデル/: EvaluateResult.csv  Parameter.csv  Result.csv
examples/pc/serial_async/: serial_async.cpp
examples/pc/serial_sync/: serial_sync.cpp
genetic_algorithm/SGA2015/: FileManager.cpp  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Utility.cpp  Utility.h  parameter.h
genetic_algorithm/SMGA2015/: CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Parameter.csv  Serial.cpp  Serial.h  Utility.cpp  kmeans.cpp  kmeans.h  kmeans_check.cpp  kmeansthreeparamater.cpp  kmeansthreeparamater.h  parameter.h
genetic_algorithm/clustering_GA/: CMakeLists.txt  GeneticAlgorithm.cpp  kmeansfiveparamater.h
genetic_algorithm/five_parameters/: CMakeLists.txt  FileManager.cpp  GeneticAlgorithm.cpp  GeneticAlgorithm.h  OneLeggedRobot.cpp  OneLeggedRobot.h  Serial.cpp  Serial.h  Utility.cpp  Utility.h  genetic_algorithm.cpp  parameter.h
genetic_algorithm/five_parameters/log/: 20150112T174251.xlsx  20150120T154327.csv  gene100_20150120.xlsx
genetic_algorithm/five_parameters/log/sandbox/: 20150112T162142.csv  20150112T165055.csv  20150112T170026.csv  20150112T170506.csv  20150112T171501.csv  20150112T172356.csv  20150112T174251.csv  20150112T181926.csv  20150113T164311.csv  20150113T170437.csv  20150113T171931.csv  20150113T172345.csv  20150113T173801.csv  20150113T174835.csv
genetic_algorithm/one_parameter/: parameter.h
mbed/: mbed.cpp
papers/: README.md  資料1.docx
samples/mbed/: mbed.cpp  mbed_serial.cpp  mbed_split.cpp  mbed_timer.cpp
samples/mbed/test/mbed/: mbed.cpp
samples/pc/Clastering GA/test1/: CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  kmeansthreeparamater.cpp  kmeansthreeparamater.h  parameter.h
samples/pc/Clastering GA/test2/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  Serial.cpp  kmeansthreeparamater.cpp  kmeansthreeparamater.h  parameter.h
samples/pc/boost_random/: CMakeLists.txt  boost_random.cpp  parameter.h
samples/pc/genetic_algorithm/: readme.md
samples/pc/genetic_algorithm/test01/: CMakeLists.txt
samples/pc/genetic_algorithm/test02/: genetic_algorithm.cpp  parameter.h
samples/pc/genetic_algorithm/test03/: genetic_algorithm.cpp  parameter.h
samples/pc/genetic_algorithm/test04/: CMakeLists.txt  genetic_algorithm.cpp  individualData.cpp  individualData.h  parameter.h  stdafx.cpp  targetver.h
samples/pc/genetic_algorithm/test05/: CMakeLists.txt  Serial.cpp  Serial.h  genetic_algorithm.cpp  kmeansfiveparamater.cpp  kmeansfiveparamater.h  parameter.h
samples/pc/genetic_algorithm/test05/three_parameters/: FileManager.h  GeneticAlgorithm.cpp  parameter.h
samples/pc/genetic_algorithm/test06/: CMakeLists.txt  FileManager.cpp  FileManager.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  kmeansfiveparamater.cpp  kmeansfiveparamater.h  parameter.h
samples/pc/kmeans/: kmeans.cpp
samples/pc/kmeans/test01/: kmeans.cpp
samples/pc/kmeans/test02/: CMakeLists.txt  kmeans.cpp  kmeansfiveparamater.cpp  rand.cpp  test.xlsx
samples/pc/kmeans/test03/: CMakeLists.txt  kmeansfiveparamater.cpp  kmeansfiveparamater.h
samples/pc/robot_string/: CMakeLists.txt  robot_string.cpp
samples/pc/serial_async/: CMakeLists.txt
samples/pc/serial_class/: CMakeLists.txt  Serial.cpp  Serial.h  main.cpp
samples/pc/serial_robot/: CMakeLists.txt  serial_robot.cpp
samples/pc/serial_sync/: CMakeLists.txt
